# student-centric-teacher-evaluation-system

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 01974ca8dcc9_update_table_evaluationresult_table.py  06b688d01582_add_admin_id_attribute_in_evaluation_.py  071055f22a2c_add_category_field_in_question_table.py  101ed93651b4_update_user_model.py  261bf1d83081_update_question_table.py  2d5787b500a9_update_user_model.py  2d95007de315_add_admin_id_field_in_user_model.py  40f285a8695c_add_field_in_evalaution_table.py  42824c6473ab_update_user_table.py  5ef0576b15ae_initial_migrations.py  7015261e6547_initial_commit.py  7a953f82b932_add_is_submitted_field_in_evaluation_.py  7a9b890ed1fc_update_user_model.py  81eeabd99f4d_update_question_result_model.py  83144b3ca4be_add_additional_fields_in_questionresult_.py  8478f02a26f5_update_table_evaluation_table.py  85d8193b9a8a_add_evaluation_result_table.py  85d9bcc54f43_initial_migration.py  90d8a55abb7e_update_user_model.py  942512503776_update_user_model.py  953d474c7e31_add_evaluation_model_and_crud.py  9c711de68ae2_create_question_table.py  9d330e2a672d_add_announcement_table.py  a3dc9387f039_update_question_model.py  aec94c33961c_update_evaluation_and_question_model.py  b9c7ede0351c_add_additional_fields_in_evaluation_.py  cedd6c003747_update_evaluation_model.py  dd651f1c490b_create_item_and_user_table.py  e0611f12ff7f_update_user_model.py  (+1 more)
app/: main.py
exceptions/: exceptions.py
tests/: __init__.py  conftest.py
(+69 files in other folders)
